--- a/css/video.css
+++ b/css/video.css
@@ -18,6 +18,7 @@ figcaption{
 	text-align: center;
 }
 .oldSchool{
+	display:block;
 	filter: grayscale(100%);
 	width:75%;
 	border:5px double grey;
